Add Tailwind and update styles & views
Integrate Tailwind CSS and related dev tools (tailwindcss, @tailwindcss/cli, @tailwindcss/typography, concurrently). Add new stylesheet (src/css/main.css), update public/css/styles.css, and include a new logo image (public/images/HCS-Logo-v5.png). Update EJS templates and partials (head, header, footer, home, about, contact) to use the new styles/markup. package.json and package-lock.json have been updated to reflect the new dependencies and dev tooling.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "description": "Heron Constructive Solutions LTD Website (Express + EJS)",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "css:build": "npx @tailwindcss/cli -i src/css/main.css -o public/css/styles.css --minify",
+    "css:watch": "npx @tailwindcss/cli -i src/css/main.css -o public/css/styles.css --watch",
+    "start": "npm run css:build && node server.js",
+    "dev": "concurrently \"npm run css:watch\" \"nodemon server.js\""
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -14,6 +16,10 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@tailwindcss/cli": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.19",
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.9",
+    "tailwindcss": "^4.1.18"
   }
 }
